# omoide

./: .gitignore  Cargo.toml  pyproject.toml  requirements.txt
src/: args.rs  dedup.rs  dict.rs  document.rs  kanji.rs  lib.rs  main.rs  srs.rs  subs.rs
src/nlp/: mod.rs  nlp.py
