[package]
name = "omoide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
jmdict = "2"
pyo3 = { version = "0.21", features = ["auto-initialize"] }
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }