[package]
name = "omoide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.5.4", features = ["derive"] }
fxhash = "0.2.1"
jmdict = "2"
kanjidic_parser = "0.1.3"
kanjidic_types = "0.1.4"
lazy_static = "1"
pyo3 = { version = "0.21", features = ["auto-initialize"] }
regex = "1.10.6"
srtlib = "0.1.9"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
