[package]
name = "omoide"
version = "0.1.0"
edition = "2021"

[lib]
name = "omoide"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = "1"
clap = { version = "4.5.4", features = ["derive"] }
fxhash = "0.2.1"
jmdict = { version = "2", features = ["full"] } # TODO: unmaintained, and the dict is a bit out of date now
kanjidic_parser = "0.1.3"
kanjidic_types = "0.1.4"
lazy_static = "1"
pyo3 = { version = "0.22.2", features = ["extension-module", "auto-initialize", "experimental-async", "anyhow", "multiple-pymethods"] }
regex = "1.10.6"
srtlib = "0.1.9"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
wana_kana = "2.0"